--- a/example-smart-app/launch.html
+++ b/example-smart-app/launch.html
@@ -27,7 +27,7 @@
     <script>
       FHIR.oauth2.authorize({
         'client_id': '5659476a-4edd-4563-8020-3d3e0cc39e38',
-        'scope':  'patient/Patient.read patient/Observation.read patient/.read patient/MedicationOrder.read launch online_access openid profile'
+        'scope':  'patient/Patient.read patient/Observation.read patient/MedicationOrder.read launch online_access openid profile'
       });
     </script>
     <div class="spinner">
